Bug 194155 - Kopete crashed on deleting AIM bots folder
Summary: Kopete crashed on deleting AIM bots folder
Status: RESOLVED FIXED
Alias: None
Product: kopete
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Unlisted Binaries Linux
: NOR crash
Target Milestone: ---
Assignee: Kopete Developers
URL:
Keywords:
: 194331 (view as bug list)
Depends on:
Blocks:
 
Reported: 2009-05-26 15:05 UTC by Simon Toth
Modified: 2009-05-27 19:11 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Simon Toth 2009-05-26 15:05:13 UTC
Application that crashed: kopete
Version of the application: 0.70.85
KDE Version: 4.2.86 (KDE 4.2.86 (KDE 4.3 >= 20090514)) "release 126"
Qt Version: 4.5.1
Operating System: Linux 2.6.27.21-0.1-default x86_64
Distribution: "openSUSE 11.1 (x86_64)"

What I was doing when the application crashed:
After deleting the folder with AIM bots, kopete crashed.

 -- Backtrace:
Application: Kopete (kopete), signal: Segmentation fault
[Current thread is 1 (Thread 0x7f95e4138760 (LWP 5304))]

Thread 4 (Thread 0x7f95cff37950 (LWP 5811)):
#0  0x00007f95dfe16581 in pthread_mutex_lock () from /lib64/libpthread.so.0
#1  0x00007f95da9e4876 in ?? () from /usr/lib64/libglib-2.0.so.0
#2  0x00007f95da9e4a8b in g_main_context_iteration () from /usr/lib64/libglib-2.0.so.0
#3  0x00007f95e019b8be in QEventDispatcherGlib::processEvents (this=0x823ef0, flags=<value optimized out>) at kernel/qeventdispatcher_glib.cpp:326
#4  0x00007f95e01709f2 in QEventLoop::processEvents (this=<value optimized out>, flags={i = -806129664}) at kernel/qeventloop.cpp:149
#5  0x00007f95e0170dbd in QEventLoop::exec (this=0x85f030, flags={i = -806129536}) at kernel/qeventloop.cpp:200
#6  0x00007f95ccd09bee in QCA::SyncThread::run() () from /usr/lib64/libqca.so.2
#7  0x00007f95e0088f22 in QThreadPrivate::start (arg=0xa9d600) at thread/qthread_unix.cpp:189
#8  0x00007f95dfe15070 in start_thread () from /lib64/libpthread.so.0
#9  0x00007f95de5d210d in clone () from /lib64/libc.so.6
#10 0x0000000000000000 in ?? ()

Thread 3 (Thread 0x7f95cf736950 (LWP 5812)):
#0  0x00007f95da9e46b2 in ?? () from /usr/lib64/libglib-2.0.so.0
#1  0x00007f95da9e4a8b in g_main_context_iteration () from /usr/lib64/libglib-2.0.so.0
#2  0x00007f95e019b8be in QEventDispatcherGlib::processEvents (this=0x14e0750, flags=<value optimized out>) at kernel/qeventdispatcher_glib.cpp:326
#3  0x00007f95e01709f2 in QEventLoop::processEvents (this=<value optimized out>, flags={i = -814522320}) at kernel/qeventloop.cpp:149
#4  0x00007f95e0170dbd in QEventLoop::exec (this=0xbee710, flags={i = -814522240}) at kernel/qeventloop.cpp:200
#5  0x00007f95cd183b13 in ?? () from /usr/lib64/kde4/kopete_jabber.so
#6  0x00007f95e0088f22 in QThreadPrivate::start (arg=0x1418e70) at thread/qthread_unix.cpp:189
#7  0x00007f95dfe15070 in start_thread () from /lib64/libpthread.so.0
#8  0x00007f95de5d210d in clone () from /lib64/libc.so.6
#9  0x0000000000000000 in ?? ()

Thread 2 (Thread 0x7f95ca5fa950 (LWP 5816)):
#0  0x00007f95dfe18d59 in pthread_cond_wait@@GLIBC_2.3.2 () from /lib64/libpthread.so.0
#1  0x00007f95e0089ed9 in QWaitCondition::wait (this=0x15a39a0, mutex=0x15a3998, time=18446744073709551615) at thread/qwaitcondition_unix.cpp:87
#2  0x00007f95e14105ec in QHostInfoAgent::run (this=0x15a3980) at kernel/qhostinfo.cpp:260
#3  0x00007f95e0088f22 in QThreadPrivate::start (arg=0x15a3980) at thread/qthread_unix.cpp:189
#4  0x00007f95dfe15070 in start_thread () from /lib64/libpthread.so.0
#5  0x00007f95de5d210d in clone () from /lib64/libc.so.6
#6  0x0000000000000000 in ?? ()

Thread 1 (Thread 0x7f95e4138760 (LWP 5304)):
[KCrash Handler]
#5  0x00007f95e2e4d884 in Kopete::Group::groupId() const () from /usr/lib64/libkopete.so.4
#6  0x00007f95e2e1cb4e in Kopete::XmlContactStorage::storeMetaContact(Kopete::MetaContact*, bool) const () from /usr/lib64/libkopete.so.4
#7  0x00007f95e2e1d922 in Kopete::XmlContactStorage::save() () from /usr/lib64/libkopete.so.4
#8  0x00007f95e2e47d8f in Kopete::ContactList::save() () from /usr/lib64/libkopete.so.4
#9  0x00007f95e2e481d2 in Kopete::ContactList::qt_metacall(QMetaObject::Call, int, void**) () from /usr/lib64/libkopete.so.4
#10 0x00007f95e0187c22 in QMetaObject::activate (sender=0x8fa540, from_signal_index=<value optimized out>, to_signal_index=4, argv=0x90070) at kernel/qobject.cpp:3120
#11 0x00007f95e0181f43 in QObject::event (this=0x8fa540, e=0x398f730) at kernel/qobject.cpp:1082
#12 0x00007f95df17378d in QApplicationPrivate::notify_helper (this=0x669740, receiver=0x8fa540, e=0x7fffec186f00) at kernel/qapplication.cpp:4057
#13 0x00007f95df17ba2a in QApplication::notify (this=0x7fffec1872f0, receiver=0x8fa540, e=0x7fffec186f00) at kernel/qapplication.cpp:4022
#14 0x00007f95e0d4d37b in KApplication::notify(QObject*, QEvent*) () from /usr/lib64/libkdeui.so.5
#15 0x00007f95e017215c in QCoreApplication::notifyInternal (this=0x7fffec1872f0, receiver=0x8fa540, event=0x7fffec186f00) at kernel/qcoreapplication.cpp:610
#16 0x00007f95e019f5c0 in QTimerInfoList::activateTimers (this=0x66ca50) at kernel/qcoreapplication.h:213
#17 0x00007f95e019b93d in timerSourceDispatch (source=<value optimized out>) at kernel/qeventdispatcher_glib.cpp:164
#18 0x00007f95da9e10fb in g_main_context_dispatch () from /usr/lib64/libglib-2.0.so.0
#19 0x00007f95da9e48cd in ?? () from /usr/lib64/libglib-2.0.so.0
#20 0x00007f95da9e4a8b in g_main_context_iteration () from /usr/lib64/libglib-2.0.so.0
#21 0x00007f95e019b89f in QEventDispatcherGlib::processEvents (this=0x641d80, flags=<value optimized out>) at kernel/qeventdispatcher_glib.cpp:324
#22 0x00007f95df20ab0f in QGuiEventDispatcherGlib::processEvents (this=0xb03680, flags=<value optimized out>) at kernel/qguieventdispatcher_glib.cpp:202
#23 0x00007f95e01709f2 in QEventLoop::processEvents (this=<value optimized out>, flags={i = -333942240}) at kernel/qeventloop.cpp:149
#24 0x00007f95e0170dbd in QEventLoop::exec (this=0x7fffec187260, flags={i = -333942160}) at kernel/qeventloop.cpp:200
#25 0x00007f95e01730a4 in QCoreApplication::exec () at kernel/qcoreapplication.cpp:888
#26 0x0000000000415778 in _start ()

This bug may be a duplicate of or related to bug 186852
Comment 1 Roman Jarosz 2009-05-26 21:55:00 UTC
SVN commit 973307 by rjarosz:

When removing group, remove also the group from meta contacts and if needed remove the meta contact too.

BUG: 194155


 M  +10 -0     kopetecontactlist.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=973307
Comment 2 Roman Jarosz 2009-05-27 19:11:11 UTC
*** Bug 194331 has been marked as a duplicate of this bug. ***