When removing group, remove also the group from meta contacts and if needed remove the meta contact too.

BUG: 194155

svn path=/trunk/KDE/kdenetwork/kopete/; revision=973307